--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </div>
     </section>
     <section class="experience-area">
-        <div class="half-width">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
             <h2> Full Stack Web Developer </h2>
 
                 <h3 class="text-highlight">2021-Present | Pro Level Web Developer</h3>
@@ -50,13 +51,16 @@
 
         </div>
 
-        <div class="half-width">
+        <div id="baby-web" class="half-width single-experience">
             <h2>Baby Web Developer</h2>
             <h3 class="text-highlight">2020-2021 | Programming Hero Learner</h3>
             <p>They didn't offer me a job.But I made myself as a remove web developer.I made their website and showed it to them.They liked it.And uploaded the content.It was fun working at Programming Hero.</p>
 
         </div>
     </section>
+    <footer>
+        <p>@Rokib,all right reserved</p>
+    </footer>
     
 </body>
 </html>
